@@ -1,5 +1,5 @@
 /* Hello, Emacs, this is -*-C-*-
- * $Id: svg.trm,v 1.170.2.3 2017/01/25 06:15:01 sfeam Exp $
+ * $Id: svg.trm,v 1.170.2.4 2017/01/31 22:35:06 sfeam Exp $
  */
 
 /*------------------------------------------------------------------------------------------------------------------------------------
@@ -19,6 +19,10 @@
 
 		Hans-Bernhard Br"oker
 		broeker@physik.rwth-aachen.de
+
+	DomTerm support
+
+		Per Bothner  <per@bothner.com>
 
 ------------------------------------------------------------------------------------------------------------------------------------*/
 
@@ -53,6 +57,13 @@
  *
  * Revised font sizing Oct 2012
  *   specify font-size without "pt" units.
+ *
+ * Inline image data in Base64 encoding
+ *   Daniel Sebald May 2016
+ *
+ * Transition to SVG 2.0
+ *   remove DTD
+ *   remove option "fontfile" and references to SVG fonts 
  */
 
 /*
@@ -129,6 +140,8 @@ static char *SVG_name = NULL;
 static char *SVG_scriptdir = NULL;
 static TBOOLEAN SVG_mouseable = FALSE;
 static TBOOLEAN SVG_standalone = FALSE;
+static TBOOLEAN SVG_domterm = FALSE;
+static TBOOLEAN SVG_emit_doctype = TRUE;
 
 static TBOOLEAN SVG_groupFilledIsOpen = FALSE; /* open pm3d group flag*/
 static TBOOLEAN SVG_inTextBox = FALSE;
@@ -197,10 +210,7 @@ static void SVG_StyleFillColor __PROTO((void));
 static void SVG_local_reset __PROTO((void));
 static void SVG_DefineFillPattern __PROTO((int fillpat));
 static void SVG_MoveForced __PROTO((unsigned int x, unsigned int y));
-
-/* Points to source of requested embedded font */
-static char *SVG_embedded_font = NULL;
-static void SVG_load_fontfile __PROTO((char *fontfile));
+static void SVG_write_preamble __PROTO ((void));
 
 /* Stuff for enhanced text mode */
 static int ENHsvg_string_state = 0;
@@ -505,6 +515,14 @@ SVG_options ()
     if (!almost_equals(c_token-1, "termopt$ion"))
 	SVG_local_reset();
 
+    if (strcmp(term->name, "domterm") == 0) {
+        SVG_emit_doctype = FALSE;
+        SVG_domterm = TRUE;
+    } else {
+        SVG_emit_doctype = TRUE;
+        SVG_domterm = FALSE;
+    }
+
     while (!END_OF_COMMAND) {
 	if (almost_equals(c_token, "s$ize")) {
 	    double value;
@@ -631,18 +649,6 @@ SVG_options ()
 	    continue;
 	}
 
-	if (almost_equals(c_token, "fontfile")) {
-	    char *fontfile_name;
-	    c_token++;
-
-	    fontfile_name = try_to_get_string();
-	    if (!fontfile_name)
-		int_error(c_token, "Font filename expected");
-	    gp_expand_tilde(&fontfile_name);
-	    SVG_embedded_font = fontfile_name;
-	    continue;
-	}
-
 	if (almost_equals(c_token, "linew$idth") || equals(c_token, "lw")) {
 	    c_token++;
 	    SVG_linewidth_factor = real_expression();
@@ -717,11 +723,6 @@ SVG_options ()
 	    "name \"%s\" ", SVG_name);
     }
 
-    if (SVG_embedded_font) {
-	sprintf(term_options + strlen(term_options),
-	    "fontfile \"%s\" ", SVG_embedded_font);
-    }
-
     sprintf(term_options + strlen(term_options),
 	SVG_linecap == ROUNDED ? "rounded " : SVG_linecap == SQUARE ? "square " : "butt ");
 
@@ -749,9 +750,6 @@ SVG_local_reset()
     free(SVG_fontNameDef);
     SVG_fontNameDef = gp_strdup("Arial");
     SVG_fontSizeDef  = 12;
-    if (SVG_embedded_font)
-	free(SVG_embedded_font);
-    SVG_embedded_font = NULL;
     SVG_mouseable = FALSE;
     SVG_standalone = FALSE;
     free(SVG_name);
@@ -771,10 +769,6 @@ SVG_local_reset()
 TERM_PUBLIC void
 SVG_init ()
 {
-    int len;
-    double stroke_width;
-    char *svg_encoding = "";
-
     /* setup pens*/
     SVG_pens[0].width = SVG_LineWidth;
     strcpy (SVG_pens[0].color, "white"); /* should really be background */
@@ -830,8 +824,15 @@ SVG_init ()
 
     term->h_tic = term->v_char / 2;
     term->v_tic = term->v_char / 2;
+}
 
 /* write file header*/
+static void
+SVG_write_preamble ()
+{
+    int len;
+    double stroke_width;
+    char *svg_encoding = "";
 
     switch (encoding) {
 	case S_ENC_ISO8859_1:	svg_encoding = "encoding=\"iso-8859-1\" "; break;
@@ -853,11 +854,13 @@ SVG_init ()
 				break;
     }
 
-    fprintf (gpoutfile,
-	     "<?xml version=\"1.0\" %s standalone=\"no\"?>\n"
-	     "<!DOCTYPE svg PUBLIC \"-//W3C//DTD SVG 1.1//EN\"\n"
-	     " \"http://www.w3.org/Graphics/SVG/1.1/DTD/svg11.dtd\">\n"
-	     "<svg ", svg_encoding);
+    if (SVG_domterm)
+      fprintf(gpoutfile, "\033]72;");
+    if (SVG_emit_doctype)
+        fprintf (gpoutfile,
+                 "<?xml version=\"1.0\" %s standalone=\"no\"?>\n",
+                 svg_encoding);
+    fprintf(gpoutfile, "<svg ");
 
     if (SVG_mouseable)
 	fprintf (gpoutfile, " onload=\"if (typeof(gnuplot_svg)!='undefined') gnuplot_svg.Init(evt)\" ");
@@ -985,8 +988,6 @@ SVG_init ()
     /* Start prologue section of output file, and load fonts if requested */
 
     fprintf(gpoutfile,"<defs>\n");
-    if (SVG_embedded_font)
-	SVG_load_fontfile(SVG_embedded_font);
 
     /* definitions of point symbols */
     /* FIXME: SVG scales linewidth along with the marker itself, and
@@ -1066,8 +1067,10 @@ SVG_init ()
 TERM_PUBLIC void
 SVG_graphics ()
 {
-    /* EAM 5-May-2004 We must force a new group with fill:none in order for  */
-    /* multiple plots per page to work. Otherwise new plots are black-filled */
+    SVG_write_preamble();
+
+    /* We must force a new group with fill:none in order for multiple */
+    /* plots per page to work. Otherwise new plots are black-filled   */
     SVG_GroupOpen();
 
     SVG_fillPattern = -1;
@@ -1135,6 +1138,8 @@ SVG_text ()
 	    fprintf(gpoutfile, "gnuplot_svg.plot_axis_rmin = %g;\n",
 		(R_AXIS.autoscale & AUTOSCALE_MIN) ? 0.0 : R_AXIS.set_min);
 	    fprintf(gpoutfile, "gnuplot_svg.plot_axis_rmax = %g;\n", R_AXIS.set_max);
+	    fprintf(gpoutfile, "gnuplot_svg.polar_theta0 = 0;\n");
+	    fprintf(gpoutfile, "gnuplot_svg.polar_sense = 1;\n");
 	}
 
 	if ((axis_array[SECOND_X_AXIS].ticmode & TICS_MASK) != NO_TICS) {
@@ -1199,7 +1204,7 @@ SVG_text ()
 	fprintf(gpoutfile,"  visibility=\"hidden\"> </text>\n");
     }
 
-    /* And a box and a text element to hold mouseover hypertext */
+    /* Add a box and a text element to hold mouseover hypertext */
     if (SVG_mouseable) {
 	fprintf(gpoutfile,"\n  <rect id=\"hypertextbox\" class=\"hypertextbox\" pointer-events=\"none\"\n");
 	fprintf(gpoutfile,"  fill=\"white\" stroke=\"black\" opacity=\"0.8\"\n");
@@ -1209,11 +1214,25 @@ SVG_text ()
 	fprintf(gpoutfile,"  visibility=\"hidden\"> </text>\n");
     }
 
+    /* Add a placeholder for an image linked to mouseover hypertext */
+    if (SVG_mouseable) {
+	fprintf(gpoutfile,"\n  <image id=\"hyperimage\" class=\"hyperimage\" pointer-events=\"none\"\n");
+	fprintf(gpoutfile,"  fill=\"white\" stroke=\"black\" opacity=\"0.8\"\n");
+	fprintf(gpoutfile,"  height=\"200\" width=\"300\" visibility=\"hidden\" />\n");
+    }
+
     /* If there were any grid lines in this plot, add a button to toggle them */
     if (SVG_mouseable && SVG_hasgrid) {
 	fprintf(gpoutfile,"\n  <image x='10' y='%d' width='16' height='16' xlink:href='grid.png'\n",
 	(int)(term->ymax/SVG_SCALE)-26);
 	fprintf(gpoutfile,"    onclick='gnuplot_svg.toggleGrid();'/>\n");
+    }
+
+    fputs("</svg>\n\n", gpoutfile);
+
+    if (SVG_domterm) {
+        fprintf(gpoutfile, "\007");
+        fflush(gpoutfile);
     }
 }
 
@@ -1223,7 +1242,6 @@ SVG_text ()
 TERM_PUBLIC void
 SVG_reset ()
 {
-    fputs("</svg>\n\n", gpoutfile);
 }
 
 /*------------------------------------------------------------------------------------------------------------------------------------
@@ -1798,22 +1816,38 @@ SVG_layer(t_termlayer syncpoint)
 TERM_PUBLIC void
 SVG_image (unsigned m, unsigned n, coordval *image, gpiPoint *corner, t_imagecolor color_mode) 
 {
-    char *image_file;
-    char *base_name = SVG_name ? SVG_name : "gp";
-   
-    /* Write the image to a png file */
-    image_file = gp_alloc(strlen(base_name)+16, "SVG_image");
-    sprintf(image_file, "%s_image_%02d.png", base_name, ++SVG_imageno);
-    write_png_image (m, n, image, color_mode, image_file);
-
-    /* Map it onto the terminals coordinate system. */
+    /* Map image onto the terminal's coordinate system. */
     fprintf(gpoutfile, "<image x='%.*f' y='%.*f' width='%.*f' height='%.*f' preserveAspectRatio='none' ",
-	PREC, X(corner[0].x), PREC, Y(corner[0].y), 
-	PREC, X(corner[1].x) - X(corner[0].x), PREC, Y(corner[1].y) - Y(corner[0].y));
+	    PREC, X(corner[0].x), PREC, Y(corner[0].y), 
+	    PREC, X(corner[1].x) - X(corner[0].x), PREC, Y(corner[1].y) - Y(corner[0].y));
 
-    fprintf(gpoutfile, "xlink:href='%s_image_%02d.png'/>;\n",
-	base_name, SVG_imageno);
+    /* Feb 2017 - always embed images */
+    if (TRUE || SVG_standalone || SVG_domterm) {
+	/* Embed the PNG file in SVG by converting to base64 */
+	fprintf(gpoutfile, "xlink:href='data:image/png;base64,");
+	if (write_png_base64_image(m, n, image, color_mode, gpoutfile))
+	    os_error(NO_CARET, "SVG_image: could not write to gnuplot output file.");
+	fprintf(gpoutfile, "'/>\n");
 
+    } else {
+        /* Write the image to a png file */
+	char *image_file;
+        char *base_name = SVG_name ? SVG_name : "gp";
+	int wpiresult;
+   
+        image_file = gp_alloc(strlen(base_name)+16, "SVG_image");
+        sprintf(image_file, "%s_image_%02d.png", base_name, ++SVG_imageno);
+        wpiresult = write_png_image(m, n, image, color_mode, image_file);
+
+	/* Reference the png image file */
+	fprintf(gpoutfile, "xlink:href='%s_image_%02d.png'/>\n",
+		base_name, SVG_imageno);
+	
+	free(image_file);
+
+	if (wpiresult != 0)
+	    os_error(NO_CARET, "SVG_image: could not write to PNG reference file.");
+    }
 }
 #endif
 
@@ -1872,17 +1906,6 @@ ENHsvg_OPEN(
 
 	/* Start a new textspan fragment */
 	fputs("<tspan", gpoutfile);
-#if (0)
-	if (strcmp(SVG_fontNameCur, fontname)) {
-	    free(SVG_fontNameCur);
-	    SVG_fontNameCur = gp_strdup(fontname);
-	    fprintf(gpoutfile, " font-family=\"%s\" ", SVG_fontNameCur);
-	}
-	if (SVG_fontWeightCur && strcmp(SVG_fontWeightCur,"normal"))
-	    fprintf(gpoutfile, " font-weight=\"%s\" ", SVG_fontWeightCur);
-	if (SVG_fontStyleCur && strcmp(SVG_fontStyleCur,"normal"))
-	    fprintf(gpoutfile, " font-style=\"%s\" ", SVG_fontStyleCur);
-#else
 	if (!fontname)
 	    fprintf(stderr,"ENHsvg_OPEN: null fontname\n");
 	else {
@@ -1902,7 +1925,6 @@ ENHsvg_OPEN(
 	    if (strstr(fontname,":Italic"))
 		fprintf(gpoutfile, " font-style=\"italic\" ");
 	}
-#endif
 	if (SVG_fontSizeCur != fontsize) {
 	    SVG_fontSizeCur = fontsize;
 	    fprintf(gpoutfile, " font-size=\"%.1f\"", SVG_fontSizeCur * SVG_fontscale);
@@ -2035,70 +2057,6 @@ ENHsvg_writec(int c)
     }
 }
 
-static void
-SVG_load_fontfile(char *fontfile)
-{
-    if (fontfile) {
-	unsigned int linesread = 0;
-	FILE *ffont = NULL;
-	char line[256];
-	char *fontname = NULL;
-#if defined(PIPES)
-	TBOOLEAN ispipe = FALSE;
-#endif
-
-#if defined(PIPES)
-	if ( *fontfile == '<' ) {
-	    restrict_popen();
-	    ispipe = TRUE;
-	    ffont = popen(fontfile + 1, "r" );
-	    if ( !ffont )
-		int_error(NO_CARET, "Could not execute pipe '%s'",
-			  fontfile + 1 );
-	} else
-#endif
-	{
-	    ffont = fopen(fontfile, "r");
-	    if (!ffont)
-		int_error(NO_CARET, "Font file '%s' not found", fontfile);
-	}
-
-	/* read the file */
-	while (fgets(line,255,ffont)) {
-	    /* Echo fontname to terminal */
-	    if ((fontname = strstr(line,"font-family"))) {
-		fprintf(stderr, "Font file '%s' contains the font '%s'\n",
-				fontfile, fontname);
-	    }
-
-	    /* Copy contents into output file */
-	    fputs(line,gpoutfile);
-
-	    ++linesread;
-	}
-#if defined(PIPES)
-	if ( ispipe ) {
-	    int exitcode;
-	    if ( (exitcode = pclose(ffont)) != 0 )
-		int_error(NO_CARET, "Command '%s' generated error exitcode %d",
-			  fontfile + 1, exitcode);
-	} else
-#endif
-	    fclose(ffont);
-
-	if (linesread == 0) {
-#if defined(PIPES)
-	    if ( ispipe )
-		int_error(NO_CARET,
-		    "Command '%s' generates empty output", fontfile + 1);
-	    else
-#endif
-		int_error(NO_CARET, "Font file '%s' is empty", fontfile);
-	}
-
-    }
-}
-
 TERM_PUBLIC void
 SVG_path(int p)
 {
@@ -2168,7 +2126,7 @@ TERM_TABLE_START (svg_driver)
     SVG_options, SVG_init, SVG_reset, SVG_text, null_scale, SVG_graphics,
     SVG_move, SVG_vector, SVG_linetype, SVG_put_text, SVG_text_angle,
     SVG_justify_text, SVG_point, do_arrow, SVG_set_font, do_pointsize,
-    TERM_CAN_MULTIPLOT | TERM_CAN_DASH | TERM_ALPHA_CHANNEL|TERM_LINEWIDTH,
+    TERM_CAN_DASH | TERM_ALPHA_CHANNEL|TERM_LINEWIDTH,
     0 /* suspend */, 0 /* resume */ , SVG_fillbox, SVG_linewidth
 #ifdef USE_MOUSE
    , 0, 0, 0, 0, 0 /* no mouse support for svg */
@@ -2197,6 +2155,42 @@ TERM_TABLE_END (svg_driver)
 #undef LAST_TERM
 #define LAST_TERM svg_driver
 
+TERM_TABLE_START (domterm_driver)
+    "domterm", "DomTerm terminal emulator with embedded SVG",
+    0 /* xmax */ , 0 /* ymax */ , 0 /* vchar */ , 0 /* hchar */ ,
+    0 /* vtic */ , 0 /* htic */ ,
+    SVG_options, SVG_init, SVG_reset, SVG_text, null_scale, SVG_graphics,
+    SVG_move, SVG_vector, SVG_linetype, SVG_put_text, SVG_text_angle,
+    SVG_justify_text, SVG_point, do_arrow, SVG_set_font, do_pointsize,
+    TERM_CAN_DASH | TERM_ALPHA_CHANNEL|TERM_LINEWIDTH,
+    0 /* suspend */, 0 /* resume */ , SVG_fillbox, SVG_linewidth
+#ifdef USE_MOUSE
+   , 0, 0, 0, 0, 0 /* no mouse support for svg */
+#endif
+   , SVG_make_palette,
+   SVG_previous_palette,
+   SVG_set_color,
+   SVG_filled_polygon
+#ifdef WRITE_PNG_IMAGE
+    , SVG_image
+#else
+    , NULL	/* image */
+#endif
+   , ENHsvg_OPEN, ENHsvg_FLUSH, ENHsvg_writec
+   , SVG_layer	/* layer */
+   , SVG_path 	/* path */
+   , SVG_SCALE	/* pixel oversampling scale */
+   , SVG_hypertext	/* hypertext support */
+#ifdef EAM_BOXED_TEXT
+   , SVG_boxed_text	/* boxed text labels */
+#endif
+   , NULL		/* modify_plots */
+   , SVG_dashtype	/* Version 5 dashtype support */
+TERM_TABLE_END (domterm_driver)
+
+#undef LAST_TERM
+#define LAST_TERM domterm_driver
+
 #endif /* TERM_TABLE */
 #endif /* TERM_PROTO_ONLY */
 
@@ -2213,12 +2207,9 @@ START_HELP(svg)
 "",
 " Syntax:",
 "       set terminal svg {size <x>,<y> {|fixed|dynamic}}",
-"                        {{no}enhanced}",
-"                        {fname \"<font>\"} {fsize <fontsize>}",
 "                        {mouse} {standalone | jsdir <dirname>}",
 "                        {name <plotname>}",
-"                        {font \"<fontname>{,<fontsize>}\"}",
-"                        {fontfile <filename>}",
+"                        {font \"<fontname>{,<fontsize>}\"} {{no}enhanced}",
 "                        {rounded|butt|square} {solid|dashed} {linewidth <lw>}",
 "                        {background <rgb_color>}",
 "",
@@ -2233,10 +2224,8 @@ START_HELP(svg)
 " <fontsize> is the font size (in points, default 12). SVG viewing",
 " programs may substitute other fonts when the file is displayed.",
 "",
-" The svg terminal supports an enhanced text mode, which allows font",
-" and other formatting commands to be embedded in labels and other text",
-" strings. The enhanced text mode syntax is shared with other gnuplot",
-" terminal types. See `enhanced` for more details.",
+" The enhanced text mode syntax is shared with other gnuplot terminal types.",
+" See `enhanced` for more details.",
 "",
 " The `mouse` option tells gnuplot to add support for mouse tracking and for",
 " toggling individual plots on/off by clicking on the corresponding key entry.",
@@ -2245,22 +2234,29 @@ START_HELP(svg)
 " You can change this by using the `jsdir` option to specify either a",
 " different local directory or a general URL. The latter is usually",
 " appropriate if you are embedding the svg into a web page.",
-" Alternatively, the `standalone` option embeds the mousing code in the",
-" svg document itself rather than linking to an external resource.",
+" Alternatively, the `standalone` option embeds the mousing code in the svg",
+" document itself rather than linking to an external resource.",
 "",
 " When an SVG file will be used in conjunction with external files,",
-" e.g. if it embeds a PNG image or is referenced by javascript code",
-" in a web page or embedding document, then a unique name is required",
-" to avoid potential conflicting references to other SVG plots.",
-" Use the `name` option to ensure uniqueness.",
-"",
-" SVG allows you to embed fonts directly into an SVG document, or to",
-" provide a hypertext link to the desired font. The `fontfile` option",
-" specifies a local file which is copied into the <defs> section of the",
-" resulting SVG output file.  This file may either itself contain a font,",
-" or may contain the records necessary to create a hypertext reference to",
-" the desired font. Gnuplot will look for the requested file using the",
-" directory list in the GNUPLOT_FONTPATH environmental variable.",
-" NB: You must embed an svg font, not a TrueType or PostScript font."
+" e.g. if it is referenced by javascript code in a web page or parent document,",
+" then a unique name is required to avoid potential conflicting references",
+" to other SVG plots.  Use the `name` option to ensure uniqueness.",
+""
 END_HELP(svg)
-#endif
+
+START_HELP(domterm)
+"1 domterm",
+"?set terminal domterm",
+"?terminal domterm",
+"?set term domterm",
+"?term domterm",
+"?domterm",
+" The `domterm` terminal device runs on the DomTerm terminal emulator",
+" including the domterm and qtdomterm programs.",
+" It supports SVG graphics embedded directly in the terminal output.",
+" See http://domterm.org .",
+"",
+" Please read the help for the `svg` terminal.",
+""
+END_HELP(domterm)
+#endif /* TERM_HELP */
