@@ -2,6 +2,7 @@ Changes in 5.0.6
 ================
 * NEW command 'set micro' enables encoding-specific char for gprintf %c format
 * NEW command 'set datafile missing NaN' treats invalid data as if it were missing
+* NEW backport updated svg/domterm terminal from development version
 * CHANGE - start/end limits in nested iterations are reevaluated dynamically
 * CHANGE - revised adjustment of x2label and plot title when x2tics are present
 * CHANGE - mark non-free pdf terminal DEPRECATED (to be removed in release 5.2)
